cuberun-cube/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cuberun-cube
  namespace: cube
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: cuberun-cube
  type: ClusterIP
status:
  loadBalancer: {}
